--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>my-frist-website</title>
 </head>
 <body>
-    <h2>well come my web</h2>
+    <h2>Welcome To My Frist Website</h2>
 </body>
 </html>
